        - Removed Migrator.IsUpToDate as it is ambiguous and incurs an extra round-trip to the database (use FetchMigrations instead)
		- IVersioning: implementors need to return all executed migrations instead of answering Contains(...)
		- IVersioning and MigrationEventArgs: use the new IScheduledMigrationMetadata interface which contains the direction
      - BUG FIXES:
        - Teradata:
	      - stop creating *_0 tables when adding foreign keys
1.1.0 - Added support for SQLite (without foreign keys)
      - Added support for SQL scripting: instead of executing migrations against a database, they can be scripted into files
	  - Added command-line interface: Migrate.exe, a console application
      - Added support for retrieving migrations from multiple assemblies (thanks to FlorianHoornaar)
      - Extended/completed list of allowed primary key data types for all providers
	  - Providers define themselves which data-types can be used for identity columns
	    - this allows to use decimals without scale for SQL Server, Oracle, and Teradata
	  - Extended API to allow renaming of primary keys
	  - Removed .AsIdentity() option when adding columns (was not implemented consistently and was missing integration testing and constitues a super special-case which is hard to implement consistently for all platforms)
      - IProvider: added the DropDefault method which replaces the AddedColumn.DropThereafter and gives the providers
	    more flexibility to report what they support and what not
      - Teradata:
	    - raise validation error on adding/dropping primary keys (Teradata does not support that)
1.0.2 - BUG FIXES:
	    - SQL Server 2005/2008:
		  - rename default constraint along with the column (fixes the case when adding a new column with a default value which has the same name of a previously renamed column with a default value)
		- Oracle:
		  - rename identity sequence and trigger along with the table
		- Teradata:
		  - escape new name when renaming a table